added new pages

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li class="nav-item"><a class="nav-link" href="#section-practicing-areas">Практика</a></li>
             <!-- <li class="nav-item"><a class="nav-link" href="#section-attorneys">Партнеры</a></li> -->
             <li class="nav-item"><a class="nav-link" href="#section-testimonials">Отзывы</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Пресс центр</a></li>
+            <li class="nav-item"><a class="nav-link" href="assets/pages/press.html">Пресс центр</a></li>
             <li class="nav-item"><a class="nav-link" href="#section-contact">Контакты</a></li>
           </ul>
         </div>
@@ -170,33 +170,35 @@
                 <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion1" aria-expanded="true" aria-controls="exampleAccordion1" class="pb_font-18">Корпоративное право</a>
                 <div id="exampleAccordion1" class="collapse show" role="tabpanel">
                   <p>У Нас обширный перечень услуг для юридических лиц: создание и ликвидация юридических лиц, ведение юридической документации, представление интересов на переговорах и в суде, абонентское обслуживание организации с предоставлением 
-                    всех видов юридических услуг, бухгалтерское обслуживание и прочее.</p>
+                    всех видов юридических услуг, бухгалтерское обслуживание и прочее. <a href="assets/pages/corporativnoe-pravo.html">Подробнее</a></p>
                 </div>
               </div>
               <div class="item">
                 <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion2" aria-expanded="false" aria-controls="exampleAccordion2" class="pb_font-18">Банкротство</a>
                 <div id="exampleAccordion2" class="collapse" role="tabpanel">
                   <p>Банкротство (Несостоятельность) - это зафиксированная Судом неспособность должника исполнять свои денежные обязательства перед кредиторами. Для юридических лиц
-                    это способ для оздоровления бизнеса, для физических лиц это возможность всё начать с белого листа. 
+                    это способ для оздоровления бизнеса, для физических лиц это возможность всё начать с белого листа. <a href="assets/pages/bankrotstvo.html">Подробнее</a>
                   </p>
                 </div>
               </div>
               <div class="item">
                 <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion3" aria-expanded="false" aria-controls="exampleAccordion3" class="pb_font-18">Жилищное право</a>
                 <div id="exampleAccordion3" class="collapse" role="tabpanel">
-                  <p>За многолетнюю работу мы накопили очень объемный опыт в Жилищном праве, сопровождая деятельность Управляющих компаний и ТСЖ, а также помогая разрешать конфликты на стороне собственников помещений. Помимо этого заниматься оформлением недвижимости и узаконивая перепланировки.</p>
+                  <p>За многолетнюю работу мы накопили очень объемный опыт в Жилищном праве, сопровождая деятельность Управляющих компаний и ТСЖ, а также помогая разрешать конфликты на стороне собственников помещений. 
+                  Помимо этого заниматься оформлением недвижимости и узаконивая перепланировки. <a href="assets/pages/zhilishnoe-pravo.html">Подробнее</a></p>
                 </div>
               </div>
               <div class="item">
                 <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion4" aria-expanded="false" aria-controls="exampleAccordion4" class="pb_font-18">Сопровождение сделок</a>
                 <div id="exampleAccordion4" class="collapse" role="tabpanel">
-                  <p>Мы обеспечим безопасность и прозрачной Вашей сделки, как при покупке недвижимости, так и при любой иной сделки. Проверки продавца и объекта, сопровождение передачи денежных средств и отслеживание движения документов.</p>
+                  <p>Мы обеспечим безопасность и прозрачной Вашей сделки, как при покупке недвижимости, так и при любой иной сделки. Проверка продавца и объекта, 
+                  сопровождение передачи денежных средств и отслеживание движения документов. <a href="assets/pages/soprovozhdenie-sdelok.html">Подробнее</a></p>
                 </div>
               </div>
               <div class="item">
                 <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion5" aria-expanded="false" aria-controls="exampleAccordion5" class="pb_font-18">Трудовое право</a>
                 <div id="exampleAccordion5" class="collapse" role="tabpanel">
-                  <p>Поможем оспорить несправедливое решение работодателя, восстановить на работе или возместить ущерб, взыскать не полученную заработную плату.</p>
+                  <p>Поможем оспорить несправедливое решение работодателя, восстановить на работе или возместить ущерб, взыскать не полученную заработную плату. <a href="assets/pages/trudovie-spori.html">Подробнее</a></p>
                 </div>
               </div>
             </div>
@@ -210,16 +212,16 @@
     <section class="pb_section">
       <div class="multiple-items pb_slide_v1">
         <div>
-          <a href="#" class="link-block">
+          <a href="assets/pages/corporativnoe-pravo.html" class="link-block">
             <img src="assets/images/building.jpg" alt="bankrotstvo" class="img-fluid">
             <div class="slide-text">
               <h2>Корпоративное право</h2>
-              <p>Подробнее</p>
+              <span>Подробнее</span>
             </div>
           </a>
         </div>
         <div>
-          <a href="#" class="link-block">
+          <a href="assets/pages/bankrotstvo.html" class="link-block">
             <img src="assets/images/bankrotstvo.jpg" alt="bankrotstvo" class="img-fluid">
             <div class="slide-text">
               <h2>Банкротство</h2>
@@ -228,7 +230,7 @@
           </a>
         </div>
         <div>
-          <a href="#" class="link-block">
+          <a href="assets/pages/zhilishnoe-pravo.html" class="link-block">
             <img src="assets/images/building.jpg" alt="building" class="img-fluid">
             <div class="slide-text">
               <h2>Жилищное право</h2>
@@ -237,7 +239,7 @@
           </a>
         </div>
         <div>
-          <a href="#" class="link-block">
+          <a href="assets/pages/soprovozhdenie-sdelok.html" class="link-block">
             <img src="assets/images/sdelka.jpg" alt="sdelka" class="img-fluid">
             <div class="slide-text">
               <h2>Сопровождение сделок</h2>
@@ -246,7 +248,7 @@
           </a>
         </div>
         <div>
-          <a href="#" class="link-block">
+          <a href="assets/pages/trudovie-spori.html" class="link-block">
             <img src="assets/images/spor.jpg" alt="trudovoi-spor" class="img-fluid">
             <div class="slide-text">
               <h2>Трудовые споры</h2>
@@ -255,7 +257,7 @@
           </a>
         </div>
         <div>
-          <a href="#" class="link-block">
+          <a href="assets/pages/administrativnie-spori.html" class="link-block">
             <img src="assets/images/administrativnoe-pravo.jpg" alt="administrativnoe-pravo" class="img-fluid">
             <div class="slide-text">
               <h2>Административные споры</h2>
@@ -264,7 +266,7 @@
           </a>
         </div>
         <div>
-          <a href="#" class="link-block">
+          <a href="assets/pages/ecology-pravo.html" class="link-block">
             <img src="assets/images/eco.jpg" alt="ecology-pravo" class="img-fluid">
             <div class="slide-text">
               <h2>Экологическое право</h2>
@@ -283,7 +285,7 @@
         <div class="row justify-content-md-center text-center mb-5">
           <div class="col-lg-7">
             <h2 class="mt-0 heading-border-top font-weight-normal">Области практики</h2>
-            <p>Какой-то красивый текст какой и где у нас богатый опыт</p>
+            <p>Широкий спектр компетенции в юридической сфере, помогает Нам достигать нужный для Клиента результат</p>
           </div>
         </div>
 
@@ -296,7 +298,7 @@
                   <div class="pb_content-media" style="background-image: url(assets/images/dolg.jpg);"></div>
                   <div class="slide_content-text text-center">
                     <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-law"></i></div>
-                    <h3 class="font-weight-normal mt-0 mb-4">Взыскание задолженностей</h3>
+                    <a href="assets/pages/vziskanie-zadolzhennosti.html"><h3 class="font-weight-normal mt-0 mb-4">Взыскание задолженностей</h3></a>
                     <p>В хозяйственной деятельности предприятия распространены случаи неплатежи по взятым на себя обязательствам или отказ возврата денежных средств.</p>
                     <p>У Нас накоплен богатый опыт по взысканию денежных средств как с физических так и с юридических лиц. Наш опыт распространяется не только на судебную часть взыскания, но и на работу с Судебными приставами по фактическому исполнению судебного решения.</p>
                   </div>
@@ -308,9 +310,9 @@
                   <div class="pb_content-media" style="background-image: url(assets/images/bankrotstvo.jpg);"></div>
                   <div class="slide_content-text text-center">
                     <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-wallet"></i></div>
-                    <h3 class="font-weight-normal mt-0 mb-4">Банкротство</h3>
+                    <a href="assets/pages/bankrotstvo.html"><h3 class="font-weight-normal mt-0 mb-4">Банкротство</h3></a>
                     <p>Признание субъекта банкротом - это шанс начать всё сначала. </p>
-                    <p>Мы помогаем гражданам выстоять в финансовых трудностях с кредиторами, а юридическим лицам финансово оздоровиться. Используя законодательные инструменты мы возвращаем своих Клиентов большую дорогу.</p>
+                    <p>Мы помогаем гражданам выстоять в финансовых трудностях с кредиторами, а юридическим лицам финансово оздоровиться. Используя законодательные инструменты мы возвращаем своих Клиентов на большую дорогу.</p>
                   </div>
                 </div>
               </div>
@@ -320,7 +322,7 @@
                   <div class="pb_content-media" style="background-image: url(assets/images/spor.jpg);"></div>
                   <div class="slide_content-text text-center">
                     <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-computer-security"></i></div>
-                    <h3 class="font-weight-normal mt-0 mb-4">Трудовые споры</h3>
+                    <a href="assets/pages/trudovie-spori.html"><h3 class="font-weight-normal mt-0 mb-4">Трудовые споры</h3></a>
                     <p>Трудовые споры не редки в отношениях работника и работодателя</p>
                     <p>Мы помогаем улаживать трудовые конфликты с работодателями, стараясь делать это в досудебном порядке, ценя время и нервы своих Клиентов.</p>
                   </div>
@@ -332,7 +334,7 @@
                   <div class="pb_content-media" style="background-image: url(assets/images/sdelka.jpg);"></div>
                   <div class="slide_content-text text-center">
                     <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-courthouse"></i></div>
-                    <h3 class="font-weight-normal mt-0 mb-4">Недвижимость</h3>
+                    <a href="assets/pages/nedvizhimost.html"><h3 class="font-weight-normal mt-0 mb-4">Недвижимость</h3></a>
                     <p>Так много нюансов надо знать при покупке недвижимости... </p>
                     <p>Чтобы в будущем у Вас не было проблем с приобретенным объектом и чтобы этот объект остался в Вашем ведении, Мы досконально проверим приобретаемый объект на наличие всех возможных опасностей для Покупателя.</p>
                   </div>
@@ -344,7 +346,7 @@
                   <div class="pb_content-media" style="background-image: url(assets/images/svidetelstvo.jpg);"></div>
                   <div class="slide_content-text text-center">
                     <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-jury"></i></div>
-                    <h3 class="font-weight-normal mt-0 mb-4">Признание права</h3>
+                    <a href="assets/pages/priznanie-prava.html"><h3 class="font-weight-normal mt-0 mb-4">Признание права</h3></a>
                     <p>Не всегда право на собственность оформлена надлежащим образом.</p>
                     <p>В таком случае признать право собственности можно только судебном порядке. Мы накопили большой опыт ведения данной категории дел, поэтому с радостью Вам поможем.</p>
                   </div>
@@ -420,7 +422,7 @@
                   <div class="media-body pl-md-5 pl-sm-0">
                     <blockquote>
                       <p>&ldquo;Моя компания занимается деревообработкой и мы столкнулись с некачественно выполненной работой одним из подрядчиков. Благодаря оперативной работе Зарипова, Москвичев и партнеры, разногласия были улажены, работа была переделана и возмещены убытки.&rdquo;</p>
-                      <p class="pb_author"><citeclass="text-uppercase">Владимир Владимирович</cite> </p>
+                      <p class="pb_author"><cite class="text-uppercase">Владимир Владимирович</cite> </p>
                     </blockquote>
                   </div>
                 </div>
@@ -590,7 +592,7 @@
               <li>
                 <span class="text-uppercase">Адрес</span>
                 Самарская область, Самара <br>
-                Проспект Кирова  <br>
+                Московское шоссе  <br>
                 
               </li>
             </ul>
