--- a/assets/pages/ecology-pravo.html
+++ b/assets/pages/ecology-pravo.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>Юридические услуги в Самаре. Банкротство, оформление, сопровождение сделок.</title>
+		<title>Экологическое право.</title>
 		<meta name="description" content="Юридическое сопровождение деятельности в Самаре. Профессиональная защита интересов Клиента в арбитражных судах и судах общей юрисдикции. Банкротство физических и юридических лиц, оформление документов, сопровождение сделок.">
 		<meta name="keywords" content="Юридические услуги в Самаре, банкротство физических и юридических лиц, оформление документов, сопровождение сделок с недвижимостью, взыскание задолженностей.">
     <meta property="og:url" content="https://zaripova-moskvichev-partners.ru">
@@ -32,6 +32,29 @@
     <link rel="stylesheet" href="../css/slick-theme.css">
     <link rel="stylesheet" href="../css/helpers.css">
     <link rel="stylesheet" href="../css/style.css">
+        <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+      m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+      ym(61764265, "init", {
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true
+      });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/61764265" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157498838-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-157498838-2');
+    </script>
   </head>
   
 	<body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
