added new design

--- a/assets/pages/corporativnoe-pravo.html
+++ b/assets/pages/corporativnoe-pravo.html
@@ -23,7 +23,7 @@
     <!--..-->
 
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600|Montserrat:200,300,400" rel="stylesheet">
-
+    <link rel="icon" href="../../favicon.ico">
 		<link rel="stylesheet" href="../css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="../fonts/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="../fonts/law-icons/font/flaticon.css">
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="../css/slick-theme.css">
     <link rel="stylesheet" href="../css/helpers.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/fm.revealator.jquery.css">
+
         <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -81,7 +83,7 @@
     </nav>
     <!-- END nav -->
 
-    <section class="pb_cover_v1 text-left cover-bg-black cover-bg-opacity-4" style="background-image: url(../images/denim1.jpg)" id="section-home">
+    <section class="pb_cover_v1 text-left cover-bg-black cover-bg-opacity-4" style="background-image: url(../images/denim1.webp)" id="section-home">
       <div class="container">
         <div class="row align-items-center justify-content-end">
           <div class="col-md-6  order-md-1">
@@ -102,12 +104,29 @@
 
         <div class="row align-items-center">
           <div class="col-md-12">
-            <h3></h3>
+            <h3>Корпоративное право. Сопровождение деятельности компании и бизнеса.</h3>
+            <p>Ведение предпринимательской деятельности сопряжено с постоянной обработкой документов и ведения переговорного процесса.</p>
+            <p>Наша организация оказывает Клиентам следующие виды услуг:</p>
+            <ul>
+              <li>Подготовка, согласование и сопровождение подписания договоров и соглашений</li>
+              <li>Ведение договоров и деловой переписки</li>
+              <li>Информационная подготовка и участие в переговорах</li>
+              <li>Представление интересов в суде, составление процессуальных документов</li>
+              <li>Взаимодействие с органами Государственной власти и местного самоуправления</li>
+              <li>Участие в плановых и внеплановых проверках надзорных органов, оспаривание административных штрафов</li>
+              <li>Разработка и внедрение внутри организационной документации</li>
+              <li>Досудебное и судебное разрешение споров по договорам подряда, поставки, услуг, аренды, купли-продажи и пр.</li>
+              <li>Сопровождение исполнительного производства</li>
+              <li>Регистрация, реорганизация и ликвидация юридических лиц ( ООО , ИП )</li>
+              <li>Внесение изменений в учредительные документы и смена учредительского состава</li>
+              <li>Сопровождение банкротства</li>
+              <li>Содействие в подготовке документов для получения кредитных средств</li>
+              <li>Подготовка заключений, экспертиз, документов для участия в торгах</li>
+              <li>Консультирование в различных направлениях законодательства с подготовкой письменного ответа</li>
+            </ul>
             <p></p>
             <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
+            
           </div>  
         </div>
 
@@ -178,7 +197,7 @@
               <li>
                 <span class="text-uppercase">Адрес</span>
                 Самарская область, Самара <br>
-                Московское шоссе  <br>
+                ул. Днепростроевская д.25а  <br>
                 
               </li>
             </ul>
@@ -223,7 +242,9 @@
 
     <script src="../js/main.js"></script>
     <script src="../js/sendmail.js"></script>
-
+    <script src="../js/fm.revealator.jquery.js"></script>
     <script src="../js/smtp.js"></script>
+    <script src="../js/fm.revealator.jquery.js"></script>
+
 	</body>
 </html>
