--- a/assets/pages/bankrotstvo.html
+++ b/assets/pages/bankrotstvo.html
@@ -23,7 +23,7 @@
     <!--..-->
 
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600|Montserrat:200,300,400" rel="stylesheet">
-
+    <link rel="icon" href="../../favicon.ico">
 		<link rel="stylesheet" href="../css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="../fonts/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="../fonts/law-icons/font/flaticon.css">
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="../css/slick-theme.css">
     <link rel="stylesheet" href="../css/helpers.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/fm.revealator.jquery.css">
+
         <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -81,7 +83,7 @@
     </nav>
     <!-- END nav -->
 
-    <section class="pb_cover_v1 text-left cover-bg-black cover-bg-opacity-4" style="background-image: url(../images/denim1.jpg)" id="section-home">
+    <section class="pb_cover_v1 text-left cover-bg-black cover-bg-opacity-4" style="background-image: url(../images/denim1.webp)" id="section-home">
       <div class="container">
         <div class="row align-items-center justify-content-end">
           <div class="col-md-6  order-md-1">
@@ -102,9 +104,10 @@
 
         <div class="row align-items-center">
           <div class="col-md-12">
-            <h3></h3>
-            <p></p>
-            <p></p>
+            <h3>Банкротство. Сопровождение банкротства физических и юридических лиц.</h3>
+            <p>Банкротство (Несостоятельность) - это зафиксированная Судом неспособность должника исполнять свои денежные обязательства перед кредиторами. Для юридических лиц
+              это способ для оздоровления бизнеса, для физических лиц это возможность всё начать с белого листа.</p>
+            <p>Мы помогаем гражданам выстоять в финансовых трудностях с кредиторами, а юридическим лицам финансово оздоровиться. Используя законодательные инструменты мы возвращаем своих Клиентов на большую дорогу.</p>
             <p></p>
             <p></p>
             <p></p>
@@ -178,7 +181,7 @@
               <li>
                 <span class="text-uppercase">Адрес</span>
                 Самарская область, Самара <br>
-                Московское шоссе  <br>
+                ул. Днепростроевская д.25а  <br>
                 
               </li>
             </ul>
@@ -225,5 +228,7 @@
     <script src="../js/sendmail.js"></script>
 
     <script src="../js/smtp.js"></script>
+    <script src="../js/fm.revealator.jquery.js"></script>
+
 	</body>
 </html>
