--- a/assets/pages/nedvizhimost.html
+++ b/assets/pages/nedvizhimost.html
@@ -23,7 +23,7 @@
     <!--..-->
 
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600|Montserrat:200,300,400" rel="stylesheet">
-
+    <link rel="icon" href="../../favicon.ico">
 		<link rel="stylesheet" href="../css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="../fonts/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="../fonts/law-icons/font/flaticon.css">
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="../css/slick-theme.css">
     <link rel="stylesheet" href="../css/helpers.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/fm.revealator.jquery.css">
+
         <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -81,7 +83,7 @@
     </nav>
     <!-- END nav -->
 
-    <section class="pb_cover_v1 text-left cover-bg-black cover-bg-opacity-4" style="background-image: url(../images/denim1.jpg)" id="section-home">
+    <section class="pb_cover_v1 text-left cover-bg-black cover-bg-opacity-4" style="background-image: url(../images/denim1.webp)" id="section-home">
       <div class="container">
         <div class="row align-items-center justify-content-end">
           <div class="col-md-6  order-md-1">
@@ -179,7 +181,7 @@
               <li>
                 <span class="text-uppercase">Адрес</span>
                 Самарская область, Самара <br>
-                Московское шоссе  <br>
+                ул. Днепростроевская д.25а  <br>
                 
               </li>
             </ul>
@@ -224,7 +226,7 @@
 
     <script src="../js/main.js"></script>
     <script src="../js/sendmail.js"></script>
-
+    <script src="../js/fm.revealator.jquery.js"></script>
     <script src="../js/smtp.js"></script>
 	</body>
 </html>
