changed speed loading

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>    
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<title>Юридические услуги в Самаре. Банкротство, оформление, сопровождение сделок.</title>
 		<meta name="description" content="Юридическое сопровождение деятельности в Самаре. Профессиональная защита интересов Клиента в арбитражных судах и судах общей юрисдикции. Банкротство физических и юридических лиц, оформление документов, сопровождение сделок.">
 		<meta name="keywords" content="Юридические услуги в Самаре, банкротство физических и юридических лиц, оформление документов, сопровождение сделок с недвижимостью, взыскание задолженностей.">
@@ -17,15 +17,16 @@
 
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600|Montserrat:200,300,400" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
-		<link rel="stylesheet" href="assets/css/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="assets/fonts/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/fonts/law-icons/font/flaticon.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome/css/font-awesome.min.css">    
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/slick-theme.css">
-    <link rel="stylesheet" href="assets/css/helpers.css">
+    <!-- <link rel="stylesheet" href="assets/css/helpers.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/fm.revealator.jquery.css">
+    <!-- <link rel="stylesheet" href="assets/css/jquery.parallax.css"> -->
         <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -83,7 +84,7 @@
             <h2 class="heading mb-3">Зарипова, Москвичев и партнеры</h2>
             <div class="sub-heading"><p class="mb-5">Консалтинг и Юридическое сопровождение деятельности с гарантией положительных результатов</p>
             <ul class="advantages__ul">
-              <li class="advantages__li"><img class="logo-icon-animate" src="assets/images/logo-icon.png" alt="logo-icon"><p class="commercial_proposal">Комплексное сопровождение от 3 000 руб<br>Наведем порядок в документах, настроим юридическую работу</p></li>
+              <li class="advantages__li"><img class="logo-icon-animate" src="assets/images/logo-icon.png" alt="logo-icon"><p class="commercial_proposal">Комплексное сопровождение от 3000 руб<br>Наведем порядок в документах, настроим юридическую работу</p></li>
               <li class="advantages__li"><img class="logo-icon-animate" src="assets/images/logo-icon.png" alt="logo-icon"><p class="commercial_proposal">Гарантии обоснованного прогноза благополучного исхода дела фиксируем в договоре</p></li>
               <li class="advantages__li"><img class="logo-icon-animate" src="assets/images/logo-icon.png" alt="logo-icon"><p class="commercial_proposal">Результат от 1 недели<br>Используем ключевые показатели эффективности и четкие сроки</p></li>
             </ul>
@@ -175,9 +176,9 @@
         <div class="row justify-content-md-center text-center mb-5">
           <div class="col-lg-8">
             <h2 class="mt-0 heading-border-top font-weight-normal revealator-slidedown">Почему мы</h2>
-            <p class="revealator-slideup">Нас выбирают за положительный результат поставленной задачи, выполненной в срок.</p>
-            <p class="revealator-slideright">За 15 лет успешной работы Мы достигли многих показателей положительных результатов своей работы, принося пользу людям и бизнесу.</p>
-            <p class="revealator-slideleft">Мы постоянно совершенствуем свою деятельность, внося современные технологии администрирования в процессы работы с Клиентами используя <a href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%B1%D0%BA%D0%B0%D1%8F_%D0%BC%D0%B5%D1%82%D0%BE%D0%B4%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%8F_%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B8" target="_blanc">Agile - методологию</a>.</p>
+            <p class="why-we revealator-slideup">Нас выбирают за положительный результат поставленной задачи, выполненной в срок.</p>
+            <p class="why-we revealator-slideright">За 15 лет успешной работы Мы достигли многих показателей положительных результатов своей работы, принося пользу людям и бизнесу.</p>
+            <p class="why-we revealator-slideleft">Мы постоянно совершенствуем свою деятельность, внося современные технологии администрирования в процессы работы с Клиентами используя <a href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%B1%D0%BA%D0%B0%D1%8F_%D0%BC%D0%B5%D1%82%D0%BE%D0%B4%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%8F_%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B8" target="_blanc">Agile - методологию</a>.</p>
           </div>
         </div>
         <div class="row">
@@ -652,7 +653,7 @@
     </footer>
     
     <!-- loader -->
-    <div id="pb_loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#FDA04F"/></svg></div>
+    <!-- <div id="pb_loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#FDA04F"/></svg></div> -->
 
 
     <script src="assets/js/jquery.min.js"></script>
@@ -669,5 +670,6 @@
 
     <script src="assets/js/smtp.js"></script>
     <script src="assets/js/fm.revealator.jquery.js"></script>
+    <!-- <script src="assets/js/jquery.parallax.min.js"></script> -->
 	</body>
 </html>
