new site optimization

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600|Montserrat:200,300,400" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.css">
+    <!-- <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.css"> -->
     <link rel="stylesheet" href="assets/fonts/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/fonts/law-icons/font/flaticon.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome/css/font-awesome.min.css">    
@@ -84,9 +84,9 @@
             <h2 class="heading mb-3">Зарипова, Москвичев и партнеры</h2>
             <div class="sub-heading"><p class="mb-5">Консалтинг и Юридическое сопровождение деятельности с гарантией положительных результатов</p>
             <ul class="advantages__ul">
-              <li class="advantages__li"><img class="logo-icon-animate" src="assets/images/logo-icon.png" alt="logo-icon"><p class="commercial_proposal">Комплексное сопровождение от 3000 руб<br>Наведем порядок в документах, настроим юридическую работу</p></li>
-              <li class="advantages__li"><img class="logo-icon-animate" src="assets/images/logo-icon.png" alt="logo-icon"><p class="commercial_proposal">Гарантии обоснованного прогноза благополучного исхода дела фиксируем в договоре</p></li>
-              <li class="advantages__li"><img class="logo-icon-animate" src="assets/images/logo-icon.png" alt="logo-icon"><p class="commercial_proposal">Результат от 1 недели<br>Используем ключевые показатели эффективности и четкие сроки</p></li>
+              <li class="advantages__li"><img class="logo-icon-animate" src="assets/images/logo-icon.webp" alt="logo-icon"><p class="commercial_proposal">Комплексное сопровождение от 3000 руб<br>Наведем порядок в документах, настроим юридическую работу</p></li>
+              <li class="advantages__li"><img class="logo-icon-animate" src="assets/images/logo-icon.webp" alt="logo-icon"><p class="commercial_proposal">Гарантии обоснованного прогноза благополучного исхода дела фиксируем в договоре</p></li>
+              <li class="advantages__li"><img class="logo-icon-animate" src="assets/images/logo-icon.webp" alt="logo-icon"><p class="commercial_proposal">Результат от 1 недели<br>Используем ключевые показатели эффективности и четкие сроки</p></li>
             </ul>
             <p><a href="#section-contact" role="button" class="btn smoothscroll pb_outline-light btn-xl pb_font-13 p-4 rounded-0 pb_letter-spacing-2">Заказать</a></p>
             </div>
