--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>    
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>Юридические услуги в Самаре. Банкротство, оформление, сопровождение сделок.</title>
+		<title>Взыскание дебиторской задолженности и юридическое сопровождение исполнительное производство, судебное взыскание долгов.</title>
 		<meta name="description" content="Юридическое сопровождение деятельности в Самаре. Профессиональная защита интересов Клиента в арбитражных судах и судах общей юрисдикции. Банкротство физических и юридических лиц, оформление документов, сопровождение сделок.">
 		<meta name="keywords" content="Юридические услуги в Самаре, банкротство физических и юридических лиц, оформление документов, сопровождение сделок с недвижимостью, взыскание задолженностей.">
     <meta property="og:url" content="https://zaripova-moskvichev-partners.ru">
@@ -13,20 +13,18 @@
     <link rel="canonical" href="https://zaripova-moskvichev-partners.ru">
     <meta property="og:image" content="">
     <meta name="yandex-verification" content="c06e9b05c6cc0f82" />
+    <meta name="yandex-verification" content="842baa09513f5822" />
     <!--Assets-->
-
+    <link rel="canonical" href="https://zaripova-moskvichev-partners.ru/index.html"/>
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600|Montserrat:200,300,400" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
-    <!-- <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.css"> -->
     <link rel="stylesheet" href="assets/fonts/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/fonts/law-icons/font/flaticon.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome/css/font-awesome.min.css">    
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/slick-theme.css">
-    <!-- <link rel="stylesheet" href="assets/css/helpers.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/fm.revealator.jquery.css">
-    <!-- <link rel="stylesheet" href="assets/css/jquery.parallax.css"> -->
         <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -39,7 +37,7 @@
           accurateTrackBounce:true
       });
     </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/61764265" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <noscript><div><img src="https://mc.yandex.ru/watch/61764265" style="position:absolute; left:-9999px;" alt="yandex" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157498838-2"></script>
@@ -79,10 +77,11 @@
     <section class="pb_cover_v1 text-left cover-bg-black cover-bg-opacity-4" style="background-image: url(assets/images/denim1.webp)" id="section-home">
       <div class="container">
         <div class="row align-items-center justify-content-end">
+          <div class="logo-main-animate"><img src="assets/images/logo-grey.webp" alt="logo-main" class="logo-icon-main"></div>
           <div class="col-md-6  order-md-1">
 
-            <h2 class="heading mb-3">Зарипова, Москвичев и партнеры</h2>
-            <div class="sub-heading"><p class="mb-5">Консалтинг и Юридическое сопровождение деятельности с гарантией положительных результатов</p>
+            <p class="heading mb-3" style="line-height: 1.2">Зарипова, Москвичев и партнеры</p>
+            <div class="sub-heading"><h1 class="mb-5">Консалтинг и Юридическое сопровождение деятельности по взысканию долгов с гарантией положительных результатов</h1>
             <ul class="advantages__ul">
               <li class="advantages__li"><img class="logo-icon-animate" src="assets/images/logo-icon.webp" alt="logo-icon"><p class="commercial_proposal">Комплексное сопровождение от 3000 руб<br>Наведем порядок в документах, настроим юридическую работу</p></li>
               <li class="advantages__li"><img class="logo-icon-animate" src="assets/images/logo-icon.webp" alt="logo-icon"><p class="commercial_proposal">Гарантии обоснованного прогноза благополучного исхода дела фиксируем в договоре</p></li>
@@ -104,8 +103,8 @@
           <div class="col-lg-5 pr-md-5 pr-sm-0 revealator-slideright">
             <h2 class="mt-0 heading-border-top mb-3 font-weight-normal">Кто мы</h2>
             <p>Профессиональная команда с опытом работы более 15 лет, в различных областях права, успешно сотрудничая как с физическими и юридическими лицами, так и с органами местного самоуправления.</p>
-            <p>Кропотливый труд и терпение сделали Нас надежной командой, ценящей доверие своих Клиентов.</p>
-            <p>Накопленный опыт позволяет нам уверенно вести дела, защищая интересы своих доверителей.</p>
+            <p>Кропотливый труд и терпение сделали нас надежной командой, ценящей доверие своих Клиентов.</p>
+            <p>Накопленный опыт позволяет организации уверенно вести дела, защищая интересы своих доверителей.</p>
           </div>
           <div class="col-lg-7">
             <div class="images">
@@ -162,7 +161,7 @@
         <div class="row align-items-center">
           <div class="col-md-12">
             <h2 class="heading mb-3 revealator-slideright">Консультация</h2>
-            <p class="sub-heading mb-5 pb_color-light-opacity-8 revealator-slideleft">Отправьте нам заявку с интересующим Вас вопросом и мы оперативно на нее ответим.</p>
+            <p class="sub-heading mb-5 pb_color-light-opacity-8 revealator-slideleft">Отправьте нам заявку с интересующим Вас вопросом и через 10 минут БЕСПЛАТНО на нее ответим.</p>
             <p><a href="#section-contact" role="button" class="btn smoothscroll pb_outline-light p-3 rounded-0 pb_font-13 pb_letter-spacing-2 revealator-slideup">Отправить</a></p>
           </div>  
         </div>
@@ -177,8 +176,8 @@
           <div class="col-lg-8">
             <h2 class="mt-0 heading-border-top font-weight-normal revealator-slidedown">Почему мы</h2>
             <p class="why-we revealator-slideup">Нас выбирают за положительный результат поставленной задачи, выполненной в срок.</p>
-            <p class="why-we revealator-slideright">За 15 лет успешной работы Мы достигли многих показателей положительных результатов своей работы, принося пользу людям и бизнесу.</p>
-            <p class="why-we revealator-slideleft">Мы постоянно совершенствуем свою деятельность, внося современные технологии администрирования в процессы работы с Клиентами используя <a href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%B1%D0%BA%D0%B0%D1%8F_%D0%BC%D0%B5%D1%82%D0%BE%D0%B4%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%8F_%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B8" target="_blanc">Agile - методологию</a>.</p>
+            <p class="why-we revealator-slideright">За 15 лет успешной работы достигли многих показателей положительных результатов своей работы, принося пользу людям и бизнесу.</p>
+            <p class="why-we revealator-slideleft">Постоянно совершенствуем свою деятельность, внося современные технологии администрирования в процессы работы с Клиентами используя <a href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%B1%D0%BA%D0%B0%D1%8F_%D0%BC%D0%B5%D1%82%D0%BE%D0%B4%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%8F_%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B8" target="_blanc">Agile - методологию</a>.</p>
           </div>
         </div>
         <div class="row">
@@ -193,7 +192,7 @@
               <div class="item">
                 <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion1" aria-expanded="true" aria-controls="exampleAccordion1" class="pb_font-18">Корпоративное право</a>
                 <div id="exampleAccordion1" class="collapse show" role="tabpanel">
-                  <p>У Нас обширный перечень услуг для юридических лиц: создание и ликвидация юридических лиц, ведение юридической документации, представление интересов на переговорах и в суде, абонентское обслуживание организации с предоставлением 
+                  <p>Обширный перечень услуг для юридических лиц: от создания и ликвидации юридических лиц, до ведения юридической документации, представление интересов на переговорах и в суде, абонентское обслуживание организации с предоставлением 
                     всех видов юридических услуг, бухгалтерское обслуживание и прочее. <a href="assets/pages/corporativnoe-pravo.html">Подробнее</a></p>
                 </div>
               </div>
@@ -208,14 +207,14 @@
               <div class="item">
                 <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion3" aria-expanded="false" aria-controls="exampleAccordion3" class="pb_font-18">Жилищное право</a>
                 <div id="exampleAccordion3" class="collapse" role="tabpanel">
-                  <p>За многолетнюю работу мы накопили очень объемный опыт в Жилищном праве, сопровождая деятельность Управляющих компаний и ТСЖ, а также помогая разрешать конфликты на стороне собственников помещений. 
+                  <p>За многолетнюю работу удалось накопить очень объемный опыт в Жилищном праве, сопровождая деятельность Управляющих компаний и ТСЖ, а также помогая разрешать конфликты на стороне собственников помещений. 
                   Помимо этого заниматься оформлением недвижимости и узаконивая перепланировки. <a href="assets/pages/zhilishnoe-pravo.html">Подробнее</a></p>
                 </div>
               </div>
               <div class="item">
                 <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion4" aria-expanded="false" aria-controls="exampleAccordion4" class="pb_font-18">Сопровождение сделок</a>
                 <div id="exampleAccordion4" class="collapse" role="tabpanel">
-                  <p>Мы обеспечим безопасность и прозрачной Вашей сделки, как при покупке недвижимости, так и при любой иной сделки. Проверка продавца и объекта, 
+                  <p>Обеспечим безопасность и прозрачной Вашей сделки, как при покупке недвижимости, так и при любой иной сделки. Проверка продавца и объекта, 
                   сопровождение передачи денежных средств и отслеживание движения документов. <a href="assets/pages/soprovozhdenie-sdelok.html">Подробнее</a></p>
                 </div>
               </div>
@@ -309,7 +308,7 @@
         <div class="row justify-content-md-center text-center mb-5">
           <div class="col-lg-7 revealator-slideup">
             <h2 class="mt-0 heading-border-top font-weight-normal">Области практики</h2>
-            <p>Широкий спектр компетенции в юридической сфере, помогает Нам достигать нужный для Клиента результат</p>
+            <p>Широкий спектр компетенции в юридической сфере, помогает достигать нужный для Клиента результат</p>
           </div>
         </div>
 
@@ -324,7 +323,7 @@
                     <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-law"></i></div>
                     <a href="assets/pages/vziskanie-zadolzhennosti.html"><h3 class="font-weight-normal mt-0 mb-4">Взыскание задолженностей</h3></a>
                     <p>В хозяйственной деятельности предприятия распространены случаи неплатежи по взятым на себя обязательствам или отказ возврата денежных средств.</p>
-                    <p>У Нас накоплен богатый опыт по взысканию денежных средств как с физических так и с юридических лиц. Наш опыт распространяется не только на судебную часть взыскания, но и на работу с Судебными приставами по фактическому исполнению судебного решения.</p>
+                    <p>У нашей организации богатый опыт по взысканию денежных средств как с физических так и с юридических лиц. Наш опыт распространяется не только на судебную часть взыскания, но и на работу с Судебными приставами по фактическому исполнению судебного решения.</p>
                   </div>
                 </div>
               </div>
@@ -336,7 +335,7 @@
                     <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-wallet"></i></div>
                     <a href="assets/pages/bankrotstvo.html"><h3 class="font-weight-normal mt-0 mb-4">Банкротство</h3></a>
                     <p>Признание субъекта банкротом - это шанс начать всё сначала. </p>
-                    <p>Мы помогаем гражданам выстоять в финансовых трудностях с кредиторами, а юридическим лицам финансово оздоровиться. Используя законодательные инструменты мы возвращаем своих Клиентов на большую дорогу.</p>
+                    <p>Помогаем гражданам выстоять в финансовых трудностях с кредиторами, а юридическим лицам финансово оздоровиться. Используя законодательные инструменты мы возвращаем своих Клиентов на большую дорогу.</p>
                   </div>
                 </div>
               </div>
@@ -348,7 +347,7 @@
                     <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-computer-security"></i></div>
                     <a href="assets/pages/trudovie-spori.html"><h3 class="font-weight-normal mt-0 mb-4">Трудовые споры</h3></a>
                     <p>Трудовые споры не редки в отношениях работника и работодателя</p>
-                    <p>Мы помогаем улаживать трудовые конфликты с работодателями, стараясь делать это в досудебном порядке, ценя время и нервы своих Клиентов.</p>
+                    <p>Помогаем улаживать трудовые конфликты с работодателями, стараясь делать это в досудебном порядке, ценя время и нервы своих Клиентов.</p>
                   </div>
                 </div>
               </div>
@@ -360,7 +359,7 @@
                     <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-courthouse"></i></div>
                     <a href="assets/pages/nedvizhimost.html"><h3 class="font-weight-normal mt-0 mb-4">Недвижимость</h3></a>
                     <p>Так много нюансов надо знать при покупке недвижимости... </p>
-                    <p>Чтобы в будущем у Вас не было проблем с приобретенным объектом и чтобы этот объект остался в Вашем ведении, Мы досконально проверим приобретаемый объект на наличие всех возможных опасностей для Покупателя.</p>
+                    <p>Чтобы в будущем у Вас не было проблем с приобретенным объектом и чтобы этот объект остался в Вашем ведении, досконально проверим приобретаемый объект на наличие всех возможных опасностей для Покупателя.</p>
                   </div>
                 </div>
               </div>
@@ -372,7 +371,7 @@
                     <div class="pb_icon_v1"><i class="flaticon text-primary flaticon-jury"></i></div>
                     <a href="assets/pages/priznanie-prava.html"><h3 class="font-weight-normal mt-0 mb-4">Признание права</h3></a>
                     <p>Не всегда право на собственность оформлена надлежащим образом.</p>
-                    <p>В таком случае признать право собственности можно только судебном порядке. Мы накопили большой опыт ведения данной категории дел, поэтому с радостью Вам поможем.</p>
+                    <p>В таком случае признать право собственности можно только судебном порядке. Накоплен большой опыт ведения данной категории дел, поэтому с радостью Вам поможем.</p>
                   </div>
                 </div>
               </div>
@@ -562,7 +561,7 @@
         <div class="row justify-content-md-center text-center mb-5">
           <div class="col-lg-7 revealator-slideup">
             <h2 class="mt-0 heading-border-top font-weight-normal">Обратная связь / Заявка</h2>
-            <p>Заполните форму и в кратчайшие сроки Мы свяжемся с Вами.</p>
+            <p>Заполните форму и в течении 10 минут наш специалист свяжется с Вами.</p>
           </div>
         </div>
 
@@ -655,21 +654,15 @@
     <!-- loader -->
     <!-- <div id="pb_loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#FDA04F"/></svg></div> -->
 
-
-    <script src="assets/js/jquery.min.js"></script>
-    
+    <script src="assets/js/jquery.min.js"></script>    
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/slick.min.js"></script>
-
     <script src="assets/js/jquery.waypoints.min.js"></script>
     <script src="assets/js/jquery.easing.1.3.js"></script>
-
     <script src="assets/js/main.js"></script>
     <script src="assets/js/sendmail.js"></script>
-
     <script src="assets/js/smtp.js"></script>
     <script src="assets/js/fm.revealator.jquery.js"></script>
-    <!-- <script src="assets/js/jquery.parallax.min.js"></script> -->
 	</body>
 </html>
