breadcrumbs, styles and texts

--- a/assets/pages/ecology-pravo.html
+++ b/assets/pages/ecology-pravo.html
@@ -115,10 +115,29 @@
 
       </div>
     </section>
-    
+
+    <div class="to-top">				
+      <img class="buttonwhite" src="./../images/buttonwhite.png" alt="buttonwhite">
+      <img class="topblue" src="./../images/topblue.png" alt="topblue">				
+    </div>    
     
     <section class="pb_section" data-section="contact" id="section-contact">
       <div class="container">
+
+        <div itemscope="" itemtype="http://schema.org/BreadcrumbList" id="breadcrumbs">
+          <span itemscope="" itemprop="itemListElement" itemtype="http://schema.org/ListItem">
+              <a rel="nofollow" itemprop="item" title="Главная" href="//zaripova-moskvichev-partners.ru">
+                 <span  itemprop="name">Главная / </span>
+                 <meta itemprop="position" content="1">
+              </a>
+          </span>
+          <span itemscope="" itemprop="itemListElement" itemtype="http://schema.org/ListItem">
+              <a itemprop="item" title="Пресс Центр" href="//zaripova-moskvichev-partners.ru/assets/pages/ecology-pravo.html">
+                 <span  itemprop="name"> Экологическое право</span>
+                 <meta itemprop="position" content="2">
+              </a>
+          </span>          
+       </div>
 
         <div class="row justify-content-md-center text-center mb-5">
           <div class="col-lg-7">
