--- a/assets/pages/press.html
+++ b/assets/pages/press.html
@@ -101,20 +101,40 @@
     <section class="pb_sm_py_cover">
       <div class="container">
 
+        <div itemscope="" itemtype="http://schema.org/BreadcrumbList" id="breadcrumbs">
+          <span itemscope="" itemprop="itemListElement" itemtype="http://schema.org/ListItem">
+              <a rel="nofollow" itemprop="item" title="Главная" href="//zaripova-moskvichev-partners.ru">
+                 <span  itemprop="name">Главная / </span>
+                 <meta itemprop="position" content="1">
+              </a>
+          </span>
+          <span itemscope="" itemprop="itemListElement" itemtype="http://schema.org/ListItem">
+              <a itemprop="item" title="Пресс Центр" href="//zaripova-moskvichev-partners.ru/assets/pages/press.html">
+                 <span  itemprop="name"> Пресс Центр</span>
+                 <meta itemprop="position" content="2">
+              </a>
+          </span>          
+       </div>
+
         <div class="row align-items-center">
           <div class="col-md-12">
-            <h3>Пресс Центр</h3>
-            <p>Зарипова, Москвичев и партнеры, как эксперты в области права, всегда рады помочь Вашему изданию в освещении различных вопросов как в деловой сфере и так и иных областях, затрагивающие и волнующие интересы Ваших читателей.</p>
-            <p>Мы имеем положительный опыт предоставления компетентной информации для СМИ, освещения событий и анализ новшеств в законодательстве. Мы излагаем информацию для удобного понимания читателей, чтобы Ваша статья была максимально понятной и исчерпывающей.</p>
-            <p>Для нашей компании правовое просвещение граждан является одной из миссий осуществления своей деятельности.</p>
-            <p>Свою заявку или вопрос Вы можете оставить заполнив форму обратной связи или позвонив по одному из ниже указанных телефонов.</p>
-            <p>Будем рады Вам помочь!</p>
+            <img class="content-img revealator-slideleft revealator-delay3" src="./../images/press.webp" alt="press">
+            <h3 class="revealator-slideright">Пресс Центр</h3>
+            <p class="revealator-slideright">Зарипова, Москвичев и партнеры, как эксперты в области права, всегда рады помочь Вашему изданию в освещении различных вопросов как в деловой сфере и так и иных областях, затрагивающие и волнующие интересы Ваших читателей.</p>
+            <p class="revealator-slideright">Мы имеем положительный опыт предоставления компетентной информации для СМИ, освещения событий и анализ новшеств в законодательстве. Мы излагаем информацию для удобного понимания читателей, чтобы Ваша статья была максимально понятной и исчерпывающей.</p>
+            <p class="revealator-slideright">Для нашей компании правовое просвещение граждан является одной из миссий осуществления своей деятельности.</p>
+            <p class="revealator-slideright">Свою заявку или вопрос Вы можете оставить заполнив форму обратной связи или позвонив по одному из ниже указанных телефонов.</p>
+            <p class="revealator-slideright">Будем рады Вам помочь!</p>
           </div>  
         </div>
 
       </div>
     </section>
 
+    <div class="to-top">				
+      <img class="buttonwhite" src="./../images/buttonwhite.png" alt="buttonwhite">
+      <img class="topblue" src="./../images/topblue.png" alt="topblue">				
+    </div>
 
     <div class="row justify-content-md-center text-center mb-5">
       <div class="col-lg-7">
