--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="col-lg-7">
             <div class="images">
               <img class="img1 img-fluid revealator-slideleft" src="assets/images/rus-flag.webp" alt="rus-flag">
-              <img class="img2 revealator-slideleft" src="assets/images/denim.webp" alt="denim_foto">
+              <img class="img2 revealator-slideleft revealator-delay3" src="assets/images/denim.webp" alt="denim_foto">
             </div>
           </div>
           
@@ -161,7 +161,7 @@
         <div class="row align-items-center">
           <div class="col-md-12">
             <h2 class="heading mb-3 revealator-slideright">Консультация</h2>
-            <p class="sub-heading mb-5 pb_color-light-opacity-8 revealator-slideleft">Отправьте нам заявку с интересующим Вас вопросом и через 10 минут БЕСПЛАТНО на нее ответим.</p>
+            <p class="sub-heading mb-5 pb_color-light-opacity-8 revealator-slideleft">Отправьте нам заявку с интересующим вас вопросом и через 10 минут БЕСПЛАТНО на нее ответим.</p>
             <p><a href="#section-contact" role="button" class="btn smoothscroll pb_outline-light p-3 rounded-0 pb_font-13 pb_letter-spacing-2 revealator-slideup">Отправить</a></p>
           </div>  
         </div>
@@ -439,9 +439,10 @@
         <div class="row justify-content-md-center">
           <div class="col-md-10 col-sm-12 mb-5">
             <div class="single-item-no-arrow pb_slide_v1">
+
               <div>
                 <div class="media">
-                  <img class="d-flex img-fluid rounded-circle mb-sm-5" src="assets/images/square_img_5.jpg" alt="Generic placeholder image">
+                  <img class="d-flex img-fluid rounded-circle mb-sm-5" src="assets/images/vladimir.webp" alt="vladimir">
                   <div class="media-body pl-md-5 pl-sm-0">
                     <blockquote>
                       <p>&ldquo;Моя компания занимается деревообработкой и мы столкнулись с некачественно выполненной работой одним из подрядчиков. Благодаря оперативной работе Зарипова, Москвичев и партнеры, разногласия были улажены, работа была переделана и возмещены убытки.&rdquo;</p>
@@ -450,9 +451,10 @@
                   </div>
                 </div>
               </div>
+
               <div>
                 <div class="media">
-                  <img class="d-flex img-fluid rounded-circle mb-sm-5" src="assets/images/square_img_5.jpg" alt="Generic placeholder image">
+                  <img class="d-flex img-fluid rounded-circle mb-sm-5" src="assets/images/tatyana.webp" alt="tatyana">
                   <div class="media-body pl-md-5 pl-sm-0">
                     <blockquote>
                       <p>&ldquo;Осуществляя деятельность в области управления многоквартирным домом, мы постоянно сталкиваемся с неплатежами собственников помещений, благодаря этой компании мы вовремя проводим работы по взысканию денежных средств, предотвращая бюджетный разрыв.&rdquo;</p>
@@ -464,15 +466,40 @@
 
               <div>
                 <div class="media">
-                  <img class="d-flex img-fluid rounded-circle mb-sm-5" src="assets/images/square_img_5.jpg" alt="Generic placeholder image">
+                  <img class="d-flex img-fluid rounded-circle mb-sm-5" src="assets/images/alla.webp" alt="alla">
                   <div class="media-body pl-md-5 pl-sm-0">
                     <blockquote>
-                      <p>&ldquo;Приобретая недвижимость я мог лишиться и денег и самой квартиры, благодаря этой компании удалось вовремя распознать нечистивых риелторов и обойти опасность.&rdquo;</p>
-                      <p class="pb_author"><cite class="text-uppercase">Игорь Сергеевич</cite> </p>
+                      <p>&ldquo;Приобретая недвижимость я могла лишиться и денег и самой квартиры, благодаря этой компании удалось вовремя распознать нечистивых риелторов и обойти опасность.&rdquo;</p>
+                      <p class="pb_author"><cite class="text-uppercase">Алла Александровна</cite> </p>
                     </blockquote>
                   </div>
                 </div>
               </div>
+
+              <div>
+                <div class="media">
+                  <img class="d-flex img-fluid rounded-circle mb-sm-5" src="assets/images/sergei.webp" alt="sergei">
+                  <div class="media-body pl-md-5 pl-sm-0">
+                    <blockquote>
+                      <p>&ldquo;Моя компания постоянно сталкивается с задержкой оплаты заказчиков, поэтому мы постоянно контактируем с компанией Зарипова и Москвичев для разрешения финансовых конфликтов, взыскивая долги.&rdquo;</p>
+                      <p class="pb_author"><cite class="text-uppercase">Сергей Сергеевич</cite> </p>
+                    </blockquote>
+                  </div>
+                </div>
+              </div>
+
+              <div>
+                <div class="media">
+                  <img class="d-flex img-fluid rounded-circle mb-sm-5" src="assets/images/stanislav.webp" alt="stanislav">
+                  <div class="media-body pl-md-5 pl-sm-0">
+                    <blockquote>
+                      <p>&ldquo;С помощью этой компании мне удалось взыскать неустойку с застройщика за несоблюдение срока сдачи дома, которых хватило на ремонт всей квартиры&rdquo;</p>
+                      <p class="pb_author"><cite class="text-uppercase">Станислав Анатольевич</cite> </p>
+                    </blockquote>
+                  </div>
+                </div>
+              </div>
+
             </div>
 
           </div>
