--- a/assets/pages/zhilishnoe-pravo.html
+++ b/assets/pages/zhilishnoe-pravo.html
@@ -101,6 +101,21 @@
     <section class="pb_sm_py_cover">
       <div class="container">
 
+        <div itemscope="" itemtype="http://schema.org/BreadcrumbList" id="breadcrumbs">
+          <span itemscope="" itemprop="itemListElement" itemtype="http://schema.org/ListItem">
+              <a rel="nofollow" itemprop="item" title="Главная" href="//zaripova-moskvichev-partners.ru">
+                 <span  itemprop="name">Главная / </span>
+                 <meta itemprop="position" content="1">
+              </a>
+          </span>
+          <span itemscope="" itemprop="itemListElement" itemtype="http://schema.org/ListItem">
+              <a itemprop="item" title="Пресс Центр" href="//zaripova-moskvichev-partners.ru/assets/pages/zhilishnoe-pravo.html">
+                 <span  itemprop="name"> Жилищное право</span>
+                 <meta itemprop="position" content="2">
+              </a>
+          </span>          
+       </div>
+
         <div class="row align-items-center">
           <div class="col-md-12">
             <h3>Жилищное Право</h3>
@@ -117,7 +132,11 @@
       </div>
     </section>
     
-    
+    <div class="to-top">				
+      <img class="buttonwhite" src="./../images/buttonwhite.png" alt="buttonwhite">
+      <img class="topblue" src="./../images/topblue.png" alt="topblue">				
+    </div>
+
     <section class="pb_section" data-section="contact" id="section-contact">
       <div class="container">
 
