--- a/assets/pages/bankrotstvo.html
+++ b/assets/pages/bankrotstvo.html
@@ -83,13 +83,14 @@
     </nav>
     <!-- END nav -->
 
-    <section class="pb_cover_v1 text-left cover-bg-black cover-bg-opacity-4" style="background-image: url(../images/denim1.webp)" id="section-home">
+    <section class="pb_cover_v1 text-left cover-bg-black cover-bg-opacity-4" style="background-image: url(../images/denim1.webp); transform: scale(1);
+    animation: pulse 7s ease-in-out infinite;" id="section-home">
       <div class="container">
         <div class="row align-items-center justify-content-end">
           <div class="col-md-6  order-md-1">
 
             <h2 class="heading mb-3">Зарипова, Москвичев и партнеры</h2>
-            <div class="sub-heading"><p class="mb-5">Юридические услуги в Самаре</p>
+            <div class="sub-heading"><p class="mb-5">Сопровождение банкротства</p>
             <p><a href="#section-contact" role="button" class="btn smoothscroll pb_outline-light btn-xl pb_font-13 p-4 rounded-0 pb_letter-spacing-2">Консультация</a></p>
             </div>
             
